maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:8: error: not found: value estsurBiscuit
        if (estsurBiscuit()) {
            ^